--- a/nestjs/docker-compose.yml
+++ b/nestjs/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    container_name: app
+    container_name: app_nest
     build: .
     ports: 
       - "3000:3000"
