--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.39",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@types/google.maps": "^3.54.3",
+    "@types/lodash": "^4.14.199",
+    "lodash": "^4.17.21",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
