--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io-client": "^4.7.2",
     "swr": "^2.2.4"
   },
   "devDependencies": {
