--- a/nestjs/docker-compose.yml
+++ b/nestjs/docker-compose.yml
@@ -17,6 +17,9 @@ services:
     volumes:
        - mongodb_data:/data/db
 
+  redis:
+    image: redis:7.0.8-alpine
+
 volumes:
   mongodb_data:
     driver: local
