--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.39",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -29,6 +30,7 @@
     "@nestjs/platform-socket.io": "^10.2.7",
     "@nestjs/websockets": "^10.2.7",
     "@prisma/client": "^5.4.1",
+    "bull": "^4.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
