--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@googlemaps/google-maps-services-js": "^3.3.39",
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
     "@types/google.maps": "^3.54.3",
     "@types/lodash": "^4.14.199",
     "lodash": "^4.17.21",
