--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_GOOGLE_MAPS_API=""
-NEXT_PUBLIC_NEST_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_API_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_API_NEST_BASE_URL="http://host.docker.internal:3000"
