--- a/nestjs/docker-compose.yml
+++ b/nestjs/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "5555:5555"
     volumes:
       - .:/home/node/app
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
   
   db:
     build: ./db
