--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-socket.io": "^10.2.7",
     "@nestjs/websockets": "^10.2.7",
     "@prisma/client": "^5.4.1",
+    "@willsoto/nestjs-prometheus": "^6.0.0",
     "bull": "^4.11.3",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
